# AOC-C

./: .gitignore  CMakeLists.txt
src/: constants.h  debug.h  main.c
src/lib/: geometry.c  geometry.h  hash.c  hash.h  strutils.c  strutils.h
src/lib/collections/: hashmap.c  hashmap.h  hashset.h
src/solvers/: solvers.h
src/solvers/2015/: day_01.c  day_02.c  day_03.c  day_04.c  day_05.c
